tree-sitter-resin/test/corpus/defer.txt
==================
Deferred blocks
==================

def main() = {
    defer {};
    defer { defer {}; };
};

---

(source_file
  (function_definition
    (lid)
    (block_body
      (statement
        (block_body))
      (statement
        (block_body
          (statement
            (block_body)))))))
